--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "A-Movement-In-a-Direction.sln"
+    "dotnet.defaultSolution": "A Movement In a Direction.sln"
 }
