--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "com.dbrizov.naughtyattributes": "2.1.4",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.14.0",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.probuilder": "6.0.5",
     "com.unity.render-pipelines.high-definition": "17.0.4",
     "com.unity.render-pipelines.high-definition-config": "17.0.4",
     "com.unity.timeline": "1.8.7",
@@ -41,8 +43,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.dbrizov.naughtyattributes": "2.1.4"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
