Finished first iteration of nav mesh generation using Recast.

--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotRecast.Core" version="2025.2.1" manuallyInstalled="true" />
+  <package id="DotRecast.Detour" version="2025.2.1" manuallyInstalled="true" />
   <package id="DotRecast.Recast" version="2025.2.1" manuallyInstalled="true" />
 </packages>
